<resources>
    <string name="app_name">embededSystem1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="loading">…</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="moisture">Moisture</string>
    <string name="camera">Camera</string>
    <string name="control">Control</string>
    <string name="graph">Graph</string>
    <string name="loading_text">Loading</string>
    <string name="title_activity_chart">Activity_chart</string>
    <string name="title_activity_chart_selection">chartSelection</string>
    <string name="title_activity_camera">Activity_camera</string>
    <string name="title_activity_control">Activity_control</string>
    <string name="moisture_threshold">Moisture Threshold (%)</string>
    <string name="water_now">Water Now !</string>
    <string name="_0">0</string>
    <string name="watering_threshold">Watering Threshold(%)</string>
</resources>
